--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@pixi/react": "^7.1.2",
     "pixi.js": "^7.4.3",
+    "prop-types": "^15.8.1",
     "react": "^18.1.1",
     "react-dom": "^18.1.1"
   },
